--- a/CSS/earphone.css
+++ b/CSS/earphone.css
@@ -151,7 +151,7 @@ nav {
    }
    .cart{
 margin:50px 30px 30px 60px;
-height: 520px;
+height: 540px;
 width: 360px;
 background-color: aliceblue;
 border-radius: 10px;
@@ -206,6 +206,7 @@ border: none;
 padding: 5px; 
 margin-left: 140px;
 margin-top: 5px;
+margin-bottom: 10px;
 cursor: pointer;
 }
 .clickbtn{
@@ -230,8 +231,8 @@ font-size: 30px;
 margin-bottom: 50px;
 }
 .range{
-    background-color: antiquewhite;
     font-size: 30px;
+    font-family: cursive;
      display:block;
      text-align: center;
 }
@@ -311,11 +312,12 @@ font-size: 15px;
 display: none;
 }
 .clickbtn{
-    width: 100px;
-    height:20px;
+    width: 180px;
+    height:30px;
     padding:1px;
+    margin-top: 5px;
     border-radius: 5px;
-    margin-left:20px;
+    margin-left:5px;
     color: rgb(11, 26, 54);
     background-color: rgb(225, 221, 221);
     display: block;
