--- a/CSS/earphone.css
+++ b/CSS/earphone.css
@@ -1,3 +1,8 @@
+body{
+    width: auto;
+    background-color:#f1fafb;
+    height: auto;
+}
 * {
     margin: 0;
     padding: 0;
@@ -89,7 +94,6 @@ nav {
 }
 .dropdown-checkbox {
     display: none;
-
 }
 
 .dropbtn {
@@ -162,12 +166,14 @@ display: inline-block;
 margin-left: 15px;
 font-size: 20px;
 }
-
+.img_background{
+    border-radius: 10px;
+}
 .e-img{
 margin: 0 50px; 
 height: 170px;
 width: 250px;
-border-radius: 10px 10px 0 0;
+border-radius: 10px;
 display: block;
 margin-bottom: 5px;
 }
@@ -234,8 +240,93 @@ margin-bottom: 50px;
      display:block;
      text-align: center;
 }
+/*footer*/
+.footer{
+    margin-top: 40px;
+    width: auto;
+    font-size: 17px;
+    padding: 100px 10%;
+    background-color: rgb(201, 223, 213);
+    color: #30665b;
+    display: flex;
+ }
+ .footer div{
+    text-align: center;
+    justify-content: space-around;
+ }
+ .first{
+    padding-left: 40px;
+ }
+ .second{
+   flex-grow:.9;
+   padding-left: 70px;
+ }
+ .footer div h3{
+    font-weight: 300;
+    margin-bottom: 30px;
+    font-size: 20px;
+    letter-spacing: 1px;
+ }
+ .footer h3{
+    color: rgb(252, 105, 0);
+ }
+ .footer h3:hover{
+    border-bottom: .5px solid rgb(199, 11, 11);
+ }
+  .first a{
+    display: block;
+    text-decoration: none;
+    color: rgb(135, 89, 29);
+    margin-bottom: 10px;
+    font-size: 19px;
+ }
+ form input{
+    width: 400px;
+    height: 45px;
+    border-radius: 7px;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    outline: none;
+    border: 1px solid rgb(236, 188, 67);
+ }
+ form button{
+    background-color: #428579;
+    border: 1px solid goldenrod;
+    color:#264412;
+    color: #ecf3f2;
+    border-radius: 30px;
+    padding: 10px 30px;
+    font-size: 15px;
+    cursor: pointer;
+ }
+ form button:hover{
+    background-color:rgb(225, 149, 6) ;
+ }
+ .icon{
+    display: flex;
+    flex-direction: row;
+    margin-top: 30px;
+ }
+ .icon img{
+    height: 30px;
+    width: 30px;
+    cursor: pointer;
+ }
+ .icon img:hover:hover{
+    box-shadow:0 0 7px 4px rgb(181, 131, 178);
+ }
 /*media queries*/
 @media screen and (max-width: 600px) {
+    nav {
+        flex-direction: column;
+        height: auto;
+        padding: 10px;
+    }
+    .menu {
+        flex-direction: column;
+        align-items: center;
+    }
     .cart{
         height: 230px;
 width: 190px;
@@ -274,11 +365,20 @@ margin-left: 50px;
 }
 }
 /* Mobile Devices */
-@media screen and (min-width: 600px) and (max-width: 915px) {
-    
+@media screen and (min-width: 601px) and (max-width: 915px) {
+    nav {
+        flex-direction: row;
+        height: auto;
+        background-color:#def0ed;
+        padding: 10px;
+    }
+    .menu {
+        flex-direction: column;
+        align-items: center;
+    }
     .cart{
         height: 250px;
-width: 190px;
+width: 250px;
 margin: 10px;
 }.container_cart {
     flex-direction: column;
@@ -292,7 +392,7 @@ display:none ;
 display:none;
 } 
 .e-img{
-margin: 0 20px; 
+margin: 0 60px; 
 height: 100px;
 width: 120px;
 border-radius: 10px 10px 0 0;
