--- a/CSS/camera.css
+++ b/CSS/camera.css
@@ -3,6 +3,12 @@
     padding: 0;
 }
 
+html,
+body {
+    height: 100%;
+    width: 100%;
+}
+
 ul {
     list-style: none;
 }
@@ -11,16 +17,7 @@ a {
     text-decoration: none;
 }
 
-.main {
-    width: 100%;
-    height: 90vh;
-    background-color: rgb(96, 195, 168);
-    position: relative;
-    background-image: url(../Images/online.png);
-    background-repeat: no-repeat;
-    background-size: 1000px;
-    background-position: right bottom;
-}
+
 
 nav {
     display: flex;
@@ -157,6 +154,7 @@ header {
     padding: 20px;
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 100%;
 }
 
 h1,
@@ -223,4 +221,390 @@ h2{
     padding: 10px;
     margin-top: 50px;
     margin-left: 140px;
+}
+.footer {
+    margin-top: 40px;
+    width: auto;
+    font-size: 17px;
+    padding: 100px 10%;
+    background-color: rgb(201, 223, 213);
+    color: #30665b;
+    display: flex;
+}
+
+.footer div {
+    text-align: center;
+    justify-content: space-around;
+}
+
+.first {
+    padding-left: 40px;
+}
+
+.second {
+    flex-grow: .9;
+    padding-left: 70px;
+}
+
+footer {
+    background-color: #ffffff;
+    text-align: center;}
+
+.footer div h3 {
+    font-weight: 300;
+    margin-bottom: 30px;
+    font-size: 20px;
+    letter-spacing: 1px;
+}
+
+.footer h3 {
+    color: rgb(252, 105, 0);
+}
+
+.footer h3:hover {
+    border-bottom: .5px solid rgb(199, 11, 11);
+}
+
+.first a {
+    display: block;
+    text-decoration: none;
+    color: rgb(135, 89, 29);
+    margin-bottom: 10px;
+    font-size: 19px;
+}
+
+form input {
+    width: 400px;
+    height: 45px;
+    border-radius: 7px;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    outline: none;
+    border: 1px solid rgb(236, 188, 67);
+}
+
+form button {
+    background-color: #428579;
+    border: 1px solid goldenrod;
+    color: #264412;
+    color: #ecf3f2;
+    border-radius: 30px;
+    padding: 10px 30px;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+form button:hover {
+    background-color: rgb(225, 149, 6);
+}
+
+.icon {
+    display: flex;
+    flex-direction: row;
+    margin-top: 30px;
+}
+
+.icon img {
+    height: 30px;
+    width: 30px;
+    cursor: pointer;
+}
+
+.icon img:hover:hover {
+    box-shadow: 0 0 7px 4px rgb(181, 131, 178);
+}
+
+
+
+/* Small Devices */
+@media (max-width: 600px) {
+    /* nav bar */
+    nav {
+        flex-direction: column;
+        height: auto;
+        padding: 10px;
+    }
+
+    .menu {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .menu li a {
+        padding: 10px 0;
+        font-size: 10px;
+    }
+
+    .menu li a:hover {
+        background-color: #def0ed;
+        border: none;
+    }
+
+    .dropbtn:hover {
+        border: none;
+
+    }
+
+    .logo {
+        font-size: 20px;
+        margin-left: 0;
+    }
+
+    
+    
+    .main {
+        background-image: none;
+    }
+    /* body */
+        .Top-Recommended {
+            margin-top: 150px;
+            text-align: center;
+        }
+        h2 {
+            margin: 0 0 20px;
+            text-align: center;
+            text-decoration: underline;
+        }
+header {
+    background-color: #f8f9fa;
+        padding: 20px;
+        text-align: center;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+    
+}
+.cart1 {
+    margin: 50px 30px 30px 60px;
+    height: 500px;
+    width: 300px;
+    background-color: aliceblue;
+    border-radius: 5px;
+    box-shadow: 1px 1px 20px 2px grey;
+    display: block;
+    
+}
+
+.cart2 {
+    margin: 50px 30px 30px 60px;
+        height: 500px;
+        width: 300px;
+        background-color: aliceblue;
+        border-radius: 5px;
+        box-shadow: 1px 1px 20px 2px grey;
+        display: block;
+}
+
+.cart3 {
+    margin: 50px 30px 30px 60px;
+        height: 500px;
+        width: 300px;
+        background-color: aliceblue;
+        border-radius: 5px;
+        box-shadow: 1px 1px 20px 2px grey;
+        display: block;
+}
+.price {
+    margin-left: 5px;
+    font-size: 10px;
+}
+
+.c1-img {
+    margin-bottom: 2.5px;
+    height: 200px;
+    width: 300px;
+    border-radius: 10px 10px 0 0;
+}
+
+.c2-img {
+    margin-bottom: 2.5px;
+        height: 200px;
+        width: 300px;
+        border-radius: 10px 10px 0 0;
+}
+
+.c3-img {
+    margin-bottom: 2.5px;
+        height: 200px;
+        width: 300px;
+        border-radius: 10px 10px 0 0;
+}
+
+.c-name {
+    margin-left: 15px;
+    font-size: 17px;
+}
+.disc {
+    margin-top: 0;
+    margin-left: 8px;
+}
+
+.d-head {
+    color: rgba(31, 31, 31, 0.829);
+}
+
+.highlight {
+    margin-top: 4px;
+    margin-left: 10px;
+}
+
+.btn {
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+    border: none;
+    padding: 5px;
+    margin-top: 25px;
+    margin-left: 10px;
+}
+}
+
+/* Medium Devices */
+@media screen and (min-width: 601px) and (max-width: 900px) {
+    nav {
+        flex-direction: row;
+        height: auto;
+        background-color: #def0ed;
+        padding: 10px;
+    }
+
+    .menu {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .menu li a {
+        padding: 10px 0;
+        font-size: 14px;
+    }
+
+    .logo {
+        font-size: 22px;
+        margin-left: 0;
+    }
+
+    .dropbtn {
+        margin-left: 20px;
+        font-size: 14px;
+    }
+
+ 
+    .main {
+        background-image: none;
+    }
+         /* body */
+         .Top-Recommended {
+             margin-top: 150px;
+             text-align: center;
+         }
+    
+         h2 {
+             margin: 0 0 20px;
+             text-align: center;
+             text-decoration: underline;
+         }
+    
+         header {
+             background-color: #f8f9fa;
+             padding: 20px;
+             text-align: center;
+             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    
+    
+         }
+    
+         .cart1 {
+             margin: 50px 30px 30px 60px;
+             height: 750px;
+             width: 600px;
+             background-color: aliceblue;
+             border-radius: 5px;
+             box-shadow: 1px 1px 20px 2px grey;
+             display: block;
+    
+         }
+    
+         .cart2 {
+            margin: 50px 30px 30px 60px;
+                height: 780px;
+                    width: 600px;
+                background-color: aliceblue;
+                border-radius: 5px;
+                box-shadow: 1px 1px 20px 2px grey;
+                display: block;
+         }
+    
+         .cart3 {
+            margin: 50px 30px 30px 60px;
+                height: 750px;
+                    width: 600px;
+                background-color: aliceblue;
+                border-radius: 5px;
+                box-shadow: 1px 1px 20px 2px grey;
+                display: block;
+         }
+    
+         .price {
+             margin-left: 5px;
+             font-size: 25px;
+         }
+    
+         .c1-img {
+             margin-bottom: 5px;
+            height: 350px;
+                width: 600px;
+             border-radius: 10px 10px 0 0;
+         }
+    
+         .c2-img {
+            margin-bottom: 5px;
+                height: 350px;
+            width: 600px;
+                border-radius: 10px 10px 0 0;
+         }
+    
+         .c3-img {
+            margin-bottom: 5px;
+                height: 350px;
+                    width: 600px;
+                border-radius: 10px 10px 0 0;
+         }
+    
+         .c-name {
+             margin-left: 10px;
+             font-size: 20px;
+         }
+    
+         .disc {
+            margin-top: 5px;
+             text-align: left;
+             font-size: 25px;
+         }
+    
+         .d-head {
+             color: rgba(31, 31, 31, 0.829);
+         }
+    
+         .highlight {
+             margin-top: 5px;
+             text-align: left;
+            font-size: 25px;
+         }
+    
+         .btn {
+             background-color: black;
+             color: white;
+             border-radius: 10px;
+             border: none;
+             padding: 5px;
+             margin-top: 25px;
+             margin-left: 10px;
+             font-size: 30px;
+         }
+}
+
+/* Large Devices (Desktops, greater than 992px) */
+@media (min-width: 700px) {
+    
 }
