--- a/CSS/earphone.css
+++ b/CSS/earphone.css
@@ -392,6 +392,13 @@ margin-left: 50px;
         background-color:#def0ed;
         padding: 10px;
     }
+    .range{
+        font-size: 30px;
+        font-family: cursive;
+         display:block;
+         text-align: center;
+         background-color: #ccd1db;
+    }
     .menu {
         flex-direction: column;
         align-items: center;
