--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -490,7 +490,7 @@ nav {
 
  .footer{
     margin-top: 150px;
-    width: auto;
+    width: 100%;
     font-size: 17px;
     padding: 100px 15%;
     background-color: rgb(201, 223, 213);
@@ -573,7 +573,6 @@ nav {
     width: 220px;
     box-shadow:0 0 10px 2px rgb(126, 151, 148);
     height: 400px;
-    border:1px solid rgb(85, 14, 183);
     background-color: rgb(255, 255, 255);
     border-radius: 15px;
     margin-top: 20px;
@@ -613,7 +612,7 @@ footer{
     text-decoration: none;
 }
 .card button:hover{
-    background-color: #81d0b0;
+    background-color: #c2e1db;
 }
     
 .card p{
@@ -640,8 +639,13 @@ footer{
     width: 350px;
     background-color: aliceblue;
     border-radius: 10px;
-    box-shadow: 1px 1px 20px 2px grey;
+    box-shadow: 1px 1px 10px 2px grey;
     display: inline-block;
+}
+
+.cart:hover{
+    box-shadow: 2px 2px 20px 2px grey;
+
 }
 .m-price{
     margin-left: 15px;
