--- a/CSS/earphone.css
+++ b/CSS/earphone.css
@@ -168,6 +168,8 @@ font-size: 20px;
 }
 .img_background{
     border-radius: 10px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
 }
 .e-img{
 margin: 0 50px; 
@@ -234,12 +236,14 @@ color: rgb(2, 2, 40);
 margin-left: 90px;
 font-size: 30px;
 margin-bottom: 50px;
+
 }
 .range{
     font-size: 30px;
     font-family: cursive;
      display:block;
      text-align: center;
+     background-color:#c2e1db;
 }
 /*footer*/
 .offer {
@@ -369,7 +373,7 @@ margin-bottom: 50px;
             font-family: cursive;
              display:block;
              text-align: center;
-             background-color: #ccd1db;
+             background-color: #c2e1db;
         }
         .earbuds-heading{
             font-size: 25px;
@@ -441,7 +445,6 @@ margin-left: 50px;
         font-family: cursive;
          display:block;
          text-align: center;
-         background-color: #ccd1db;
     }
     .menu {
         flex-direction: column;
@@ -553,11 +556,15 @@ margin-bottom: 5px;
    .sell {
     padding-right: 200px;
 }
+.horizontal-row{
+    margin-top: -30px;
+    display: block;
+}
 }
 @media screen and (min-width: 1106px) and (max-width: 1380px) { 
     .cart{
 margin-left: 100px;
-height: 520px;
+height: 530px;
 width: 370px;
 }
 .container_cart {
