--- a/CSS/television.css
+++ b/CSS/television.css
@@ -4,9 +4,11 @@
     position: relative;
 }
 ul {
-    list-style: none;}
+    list-style: none;
+}
 a {
-    text-decoration: none;}
+    text-decoration: none;
+}
 .main {
     height: 60px;
     background-color: rgb(243, 243, 243);
@@ -20,7 +22,7 @@ nav {
     letter-spacing: 2px;
     position: fixed;
     top: 0;
-    background-color: rgb(240, 247, 244);
+    background-color: rgb(222, 243, 234);
     left: 0;
     width: 100%;
     height: 50px;
