--- a/CSS/television.css
+++ b/CSS/television.css
@@ -290,4 +290,13 @@ nav {
     .header{
         margin-top: 120px;
     }
+    .card{
+        height: 600px;
+        width: 380px;
+        background-color: aliceblue;
+        border-radius: 10px;
+        box-shadow: 1px 1px 20px 2px grey;
+        display: flex;
+        flex-direction: column;
+    }
 }
