--- a/CSS/television.css
+++ b/CSS/television.css
@@ -302,3 +302,40 @@ nav {
         justify-content: end;
     }
 }
+/* Normal Devices */
+@media screen and (min-width: 601px) and (max-width: 768px) {
+    nav {
+        padding: 10px 30px;
+    }
+    .card {
+        margin: 30px auto;
+        width: 80%;
+    }
+    .btn, .buy-btn {
+        margin-left: 0;
+        display: block;
+        margin: 10px auto;
+        text-align: center;
+    }
+    form input {
+        width: 80%;
+    }
+    .footer {
+        flex-direction: column;
+        align-items: center;
+    }
+    .footer div {
+        width: 80%;
+        margin-bottom: 20px;
+    }
+    .card{
+        height: 600px;
+        width: 380px;
+        background-color: aliceblue;
+        border-radius: 10px;
+        box-shadow: 1px 1px 20px 2px grey;
+        display: flex;
+        flex-direction: column;
+        justify-content: end;
+    }
+}
